# geo-resolver

./: .gitignore  .venv  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: dependencies.py  main.py  routes.py  schemas.py
docs/: performance-options.md  performance-results.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: HistorySidebar.tsx  MapView.tsx  ResultMeta.tsx  SearchBar.tsx  StepsPanel.tsx
frontend/src/hooks/: useResolve.ts
frontend/src/lib/: api.ts
geo_resolver/: __init__.py  cli.py  db.py  direct_resolver.py  models.py  resolver.py  spatial_ops.py  tools.py
geo_resolver/api/: __init__.py  dependencies.py  main.py  routes.py  schemas.py  usage_tracker.py
geo_resolver/data/: __init__.py  build.py  download.py
geo_resolver/prompts/: system.txt
geo_resolver/providers/: __init__.py  anthropic_adapter.py  base.py  bedrock_adapter.py  google_adapter.py  litellm_adapter.py  openai_adapter.py
notebooks/: test_resolve.ipynb
scripts/: build_db.py  download_data.py
tests/: conftest.py  test_anthropic_adapter.py  test_api.py  test_bedrock_adapter.py  test_cli.py  test_db.py  test_direct_resolver.py  test_google_adapter.py  test_litellm_adapter.py  test_models.py  test_providers.py  test_resolver.py  test_spatial_ops.py  test_tools.py  visual_test.py
