[project]
name = "geo-resolver"
version = "0.1.0"
description = "Natural language to GeoJSON boundary resolver"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "Siddhartha Nambiar", email = "siddharthanambiar@gmail.com"},
]
keywords = ["geojson", "geocoding", "boundaries", "gis", "nlp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "duckdb>=1.1.0,<2.0",
    "shapely>=2.0,<3.0",
    "pyproj>=3.6,<4.0",
    "litellm>=1.0,<2.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110,<1.0", "uvicorn[standard]>=0.27,<1.0", "sse-starlette>=2.0,<3.0"]
dev = ["pytest", "httpx", "ipython"]

[project.urls]
Homepage = "https://github.com/sidscorp/geo-resolver"
Repository = "https://github.com/sidscorp/geo-resolver"
Issues = "https://github.com/sidscorp/geo-resolver/issues"

[project.scripts]
geo-resolve = "geo_resolver.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
geo_resolver = ["py.typed"]

[tool.setuptools.packages.find]
include = ["geo_resolver*"]
